<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/dashboard" />
    
    <item
        android:id="@+id/nav_transfer"
        android:icon="@drawable/ic_transfer"
        android:title="@string/transfer" />
    
    <item
        android:id="@+id/nav_invest"
        android:icon="@drawable/ic_invest"
        android:title="@string/invest" />
    
    <item
        android:id="@+id/nav_statement"
        android:icon="@drawable/ic_statement"
        android:title="@string/statement" />
    
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    
</menu>
